# open-groceries

./: .gitignore  README.md  __init__.py  beans.html  pyproject.toml  test.py
.github/workflows/: publish.yml
adapters/: __init__.py  costco.py  wegmans.py
models/: __init__.py  adapter.py  groceries.py  location.py  store.py  util.py
