[tool.poetry]
name = "wegmans-scraper"
version = "0.1.0"
description = "Scraper for Wegmans website"
authors = ["Dax Harris <matteovh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
