[tool.poetry]
name = "open-groceries"
version = "0.1.0"
description = "Unified data acquisition across multiple grocery store sites"
authors = ["Dax Harris <matteovh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
